docker/kub-back/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: local
spec:
  selector:
    app: backend
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  - name: api
    port: 8000
    targetPort: 8000
    protocol: TCP
  type: ClusterIP
